--- a/.github/docker-action/action.yml
+++ b/.github/docker-action/action.yml
@@ -23,7 +23,5 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.JENKINS_HOST }}
-    - ${{ inputs.JENKINS_JOB }}
-    - ${{ inputs.JENKINS_USER }}
-    - ${{ inputs.JENKINS_TOKEN }}
+    - -h ${{ inputs.JENKINS_HOST }}
+    - -j ${{ inputs.JENKINS_JOB }}
