--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -19,24 +19,28 @@ jobs:
     runs-on: ubuntu-latest
     environment: https://jenkins.sbit.io/
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
       -
         name: Trigger Jenkins Job deploy-DEV
         if: github.ref == 'refs/heads/dev'
-        uses: ./.github/docker-action/action.yml
+        uses: ./.github/docker-action
+        env:
+          JENKINS_USER: ${{ secrets.JENKINS_USER }}
+          JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
         with:
           JENKINS_HOST: "https://jenkins.sbit.io/"
-          JENKINS_JOB: "/admin/dev/sbitio-github/deploy-ENV/deploy-DEVEL"
-          user: ${{ secrets.JENKINS_USER }}
-          jenkins-token: ${{ secrets.JENKINS_TOKEN }}
+          JENKINS_JOB: "admin/dev/sbitio-github/deploy-ENV/deploy-devel"
       -
         name: Trigger Jenkins Job deploy-STG
         if: github.ref == 'refs/heads/production'
-        uses: ./.github/docker-action/action.yml
+        uses: ./.github/docker-action
+        env:
+          JENKINS_USER: ${{ secrets.JENKINS_USER }}
+          JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
         with:
           JENKINS_HOST: "https://jenkins.sbit.io/"
-          JENKINS_JOB: "/admin/dev/sbitio-github/deploy-ENV/deploy-DEVEL"
-          user: ${{ secrets.JENKINS_USER }}
-          jenkins-token: ${{ secrets.JENKINS_TOKEN }}
+          JENKINS_JOB: "admin/dev/sbitio-github/deploy-ENV/deploy-devel"
 #  PROD_deploy:
 #    runs-on: test-runner
 #    environment: https://jenkins.sbit.io/
