--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: https://jenkins.sbit.io/
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
       -
         name: Trigger Jenkins Job deploy-DEV
         if: github.ref == 'refs/heads/dev'
