add chmod command to edit permissions for entrypoint script

--- a/.github/docker-action/Dockerfile
+++ b/.github/docker-action/Dockerfile
@@ -16,4 +16,6 @@ RUN apt-get update -qq \
 
 COPY jenkins_remote_trigger.sh /usr/bin/
 
+RUN chmod +x /usr/bin/jenkins_remote_trigger.sh
+
 ENTRYPOINT [ "/usr/bin/jenkins_remote_trigger.sh" ]
