--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -5,6 +5,7 @@ name: deploy_ENV
 on:
   push:
     branches:
+      - nite
       ## Execute deploy-devel
       - dev
       ## Execute deploy-stg
@@ -17,28 +18,17 @@ on:
 jobs:
   deploy_DEVEL:
     runs-on: ubuntu-latest
-    environment: https://jenkins.sbit.io/
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
       -
         name: Trigger Jenkins Job deploy-DEV
-        if: github.ref == 'refs/heads/dev'
-        uses: ./.github/docker-action
-        with:
-          JENKINS_HOST: "https://jenkins.sbit.io/"
-          JENKINS_JOB: "/admin/dev/sbitio-github/deploy-ENV/deploy-DEVEL"
+        if: github.ref == 'refs/heads/nite'
+        uses: docker://registry.gitlab.com/sbitio/gitlab-ci:latest
+        env:
           JENKINS_USER: ${{ secrets.JENKINS_USER }}
           JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
-      -
-        name: Trigger Jenkins Job deploy-STG
-        if: github.ref == 'refs/heads/production'
-        uses: ./.github/docker-action
+          #TRACE: true
         with:
-          JENKINS_HOST: "https://jenkins.sbit.io/"
-          JENKINS_JOB: "/admin/dev/sbitio-github/deploy-ENV/deploy-DEVEL"
-          JENKINS_USER: ${{ secrets.JENKINS_USER }}
-          JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
+          args: "-h https://jenkins.sbit.io -j admin/dev/sbitio-github/deploy-ENV/deploy-devel"
 #  PROD_deploy:
 #    runs-on: test-runner
 #    environment: https://jenkins.sbit.io/
