Declared JENKINS_USER and JENKINS_TOKEN as environment variables

--- a/.github/docker-action/action.yml
+++ b/.github/docker-action/action.yml
@@ -22,8 +22,9 @@ outputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  env:
+    JENKINS_USER: ${{ inputs.JENKINS_USER }}
+    JNKINS_TOKEN: ${{ inputs.JENKINS_TOKEN }}
   args:
     - -h ${{ inputs.JENKINS_HOST }}
     - -j ${{ inputs.JENKINS_JOB }}
-    - -e ${{ inputs.JENKINS_USER }}
-    - -e ${{ inputs.JENKINS_TOKEN }}
