fix typo in variable declaration

--- a/.github/docker-action/action.yml
+++ b/.github/docker-action/action.yml
@@ -24,7 +24,7 @@ runs:
   image: 'Dockerfile'
   env:
     JENKINS_USER: ${{ inputs.JENKINS_USER }}
-    JNKINS_TOKEN: ${{ inputs.JENKINS_TOKEN }}
+    JENKINS_TOKEN: ${{ inputs.JENKINS_TOKEN }}
   args:
     - -h ${{ inputs.JENKINS_HOST }}
     - -j ${{ inputs.JENKINS_JOB }}
